# ICP-Trashberry

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/trash_berry_canister_backend/: Cargo.toml
src/trash_berry_canister_backend/src/: lib.rs
src/trash_berry_canister_frontend/: package.json
src/trash_berry_canister_frontend/src/: App.jsx
