[package]
name = "trash_berry_canister_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = { version = "0.13" }
candid = "0.10"
ic-cdk-timers = "0.7"         # Feel free to remove this dependency if you don't need timers
serde = "1.0.209"
ic-cdk-macros = "0.16.0"
sha2 = "0.10.8"
